ayufan: defconfig: enable video-rockchip-vga/vpu and disable rockchip-rga2
Change-Id: I5e2a0380cf5d1f53180315a04de85bb6940903d0

ayufan: defconfig: use mali-midgard-for-linux

Change-Id: I12a7c0eaca71e47d08593c76ae8f184192246e35

--- a/arch/arm64/configs/rockchip_linux_defconfig
+++ b/arch/arm64/configs/rockchip_linux_defconfig
@@ -74,6 +74,7 @@ CONFIG_SETEND_EMULATION=y
 # CONFIG_EFI is not set
 CONFIG_BINFMT_MISC=m
 CONFIG_COMPAT=y
+CONFIG_PM_WAKELOCKS=y
 CONFIG_PM_DEBUG=y
 CONFIG_PM_ADVANCED_DEBUG=y
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
@@ -640,7 +641,6 @@ CONFIG_INPUT_RK8XX_PWRKEY=y
 CONFIG_INPUT_UINPUT=y
 CONFIG_INPUT_GPIO=y
 CONFIG_SERIO_RAW=y
-CONFIG_VT_HW_CONSOLE_BINDING=y
 CONFIG_DEVPTS_MULTIPLE_INSTANCES=y
 # CONFIG_LEGACY_PTYS is not set
 # CONFIG_DEVKMEM is not set
@@ -735,6 +735,9 @@ CONFIG_MEDIA_RC_SUPPORT=y
 CONFIG_MEDIA_CEC_SUPPORT=y
 CONFIG_MEDIA_CONTROLLER=y
 CONFIG_VIDEO_V4L2_SUBDEV_API=y
+CONFIG_LIRC=y
+CONFIG_RC_DEVICES=y
+CONFIG_IR_GPIO_CIR=m
 CONFIG_MEDIA_USB_SUPPORT=y
 CONFIG_USB_VIDEO_CLASS=y
 # CONFIG_USB_VIDEO_CLASS_INPUT_EVDEV is not set
@@ -846,7 +849,8 @@ CONFIG_V4L_PLATFORM_DRIVERS=y
 CONFIG_SOC_CAMERA=y
 CONFIG_VIDEO_ROCKCHIP_ISP1=y
 CONFIG_V4L_MEM2MEM_DRIVERS=y
-CONFIG_VIDEO_ROCKCHIP_RGA=m
+CONFIG_VIDEO_ROCKCHIP_RGA=y
+CONFIG_VIDEO_ROCKCHIP_VPU=y
 CONFIG_V4L_TEST_DRIVERS=y
 CONFIG_DVB_PLATFORM_DRIVERS=y
 # CONFIG_MEDIA_SUBDRV_AUTOSELECT is not set
@@ -863,7 +867,6 @@ CONFIG_DRM=y
 CONFIG_DRM_LOAD_EDID_FIRMWARE=y
 CONFIG_DRM_DMA_SYNC=y
 CONFIG_DRM_ROCKCHIP=y
-CONFIG_ROCKCHIP_DRM_DEBUG=y
 CONFIG_ROCKCHIP_CDN_DP=y
 CONFIG_ROCKCHIP_DW_HDMI=y
 CONFIG_ROCKCHIP_DW_MIPI_DSI=y
@@ -884,6 +887,7 @@ CONFIG_MALI450=y
 CONFIG_MALI_SHARED_INTERRUPTS=y
 CONFIG_MALI_DT=y
 CONFIG_MALI_DEVFREQ=y
+CONFIG_MALI_MIDGARD_FOR_LINUX=y
 CONFIG_MALI_MIDGARD=m
 CONFIG_MALI_DMA_FENCE=y
 CONFIG_MALI_EXPERT=y
@@ -896,10 +900,10 @@ CONFIG_BACKLIGHT_LCD_SUPPORT=y
 # CONFIG_LCD_CLASS_DEVICE is not set
 CONFIG_BACKLIGHT_CLASS_DEVICE=y
 CONFIG_BACKLIGHT_PWM=y
-CONFIG_ROCKCHIP_RGA2=y
 CONFIG_RK_VCODEC=y
 CONFIG_ROCKCHIP_MPP_SERVICE=y
 CONFIG_ROCKCHIP_MPP_DEVICE=y
+CONFIG_FRAMEBUFFER_CONSOLE=y
 CONFIG_SOUND=y
 CONFIG_SND=y
 CONFIG_SND_SEQUENCER=y
@@ -1143,7 +1147,6 @@ CONFIG_ROCKCHIP_IOMMU=y
 CONFIG_RK_IOMMU=y
 CONFIG_RK_IOVMM=y
 CONFIG_ROCKCHIP_PM_DOMAINS=y
-CONFIG_ROCKCHIP_PVTM=y
 CONFIG_ROCKCHIP_SUSPEND_MODE=y
 CONFIG_PM_DEVFREQ=y
 CONFIG_DEVFREQ_GOV_PERFORMANCE=y
