ayufan: dts: pinebook-pro: add prepare delay to edp-panel
Change-Id: I313a841679420e35a7d33212f98b9fb0e0d327c4

--- a/arch/arm64/boot/dts/rockchip/rk3399-pinebook-pro.dts
+++ b/arch/arm64/boot/dts/rockchip/rk3399-pinebook-pro.dts
@@ -79,6 +79,8 @@
 		pinctrl-names = "default";
 		pinctrl-0 = <&panel_en>;
 		enable-gpios = <&gpio4 RK_PD2 GPIO_ACTIVE_HIGH>;
+		prepare-delay-ms = <20>;
+		enable-delay-ms = <20>;
 		status = "okay";
 
 		ports {
