--- a/arch/arm64/configs/rockchip_linux_defconfig
+++ b/arch/arm64/configs/rockchip_linux_defconfig
@@ -926,6 +926,8 @@ CONFIG_SND_SOC_ROCKCHIP_MULTICODECS=y
 CONFIG_SND_SOC_ROCKCHIP_RT5645=y
 CONFIG_SND_SOC_ROCKCHIP_CDNDP=y
 CONFIG_SND_SOC_ES8316=y
+CONFIG_SND_SOC_ES8323=y
+CONFIG_SND_SOC_ES8328_I2C=y
 CONFIG_SND_SOC_RK3308=y
 CONFIG_SND_SOC_RK3328=y
 CONFIG_SND_SOC_RK817=y
