--- a/arch/arm64/boot/dts/rockchip/rk3399-pinebook-pro.dts
+++ b/arch/arm64/boot/dts/rockchip/rk3399-pinebook-pro.dts
@@ -72,6 +72,15 @@
 		status = "okay";
 	};
 
+	switches {
+		compatible = "gpio-leds";
+
+		hpout-en {
+			gpios = <&gpio4 RK_PD6 GPIO_ACTIVE_HIGH>;
+			default-state = "on";
+		};
+	};
+
 	edp_panel: edp-panel {
 		compatible = "simple-panel";
 		backlight = <&backlight>;
@@ -203,25 +212,20 @@
 		status = "okay";
 	};
 
-	es8316-sound {
+	es8323-sound {
 		status = "okay";
 		compatible = "simple-audio-card";
 		simple-audio-card,format = "i2s";
-		simple-audio-card,name = "rockchip,es8316-codec";
-		simple-audio-card,mclk-fs = <256>;
-		simple-audio-card,widgets =
-			"Microphone", "Mic Jack",
-			"Headphone", "Headphone Jack";
-		simple-audio-card,routing =
-			"Mic Jack", "MICBIAS1",
-			"IN1P", "Mic Jack",
-			"Headphone Jack", "HPOL",
-			"Headphone Jack", "HPOR";
+		simple-audio-card,name = "rockchip,es8323-codec";
+		simple-audio-card,mclk-fs = <512>;
+
 		simple-audio-card,cpu {
 			sound-dai = <&i2s1>;
+			system-clock-frequency = <12288000>;
 		};
 		simple-audio-card,codec {
-			sound-dai = <&es8316>;
+			sound-dai = <&es8323>;
+			system-clock-frequency = <12288000>;
 		};
 	};
 
@@ -640,18 +644,18 @@
 
 &i2c1 {
 	status = "okay";
-	i2c-scl-rising-time-ns = <168>;
-	i2c-scl-falling-time-ns = <4>;
+	i2c-scl-rising-time-ns = <300>;
+	i2c-scl-falling-time-ns = <15>;
 
-	es8316: es8316@11 {
+	es8323: es8323@10 {
 		#sound-dai-cells = <0>;
-		compatible = "everest,es8316";
-		reg = <0x11>;
+		compatible = "everest,es8323";
+		reg = <0x10>;
 		clocks = <&cru SCLK_I2S_8CH_OUT>;
 		clock-names = "mclk";
 		pinctrl-names = "default";
 		pinctrl-0 = <&i2s_8ch_mclk>;
-		spk-con-gpio = <&gpio0 RK_PB3 GPIO_ACTIVE_HIGH>;
+		spk-con-gpio = <&gpio0 RK_PB3 GPIO_ACTIVE_LOW>;
 		hp-det-gpio = <&gpio0 RK_PB0 GPIO_ACTIVE_HIGH>;
 	};
 };
